# data-prep-kit-examples

./: .gitignore  2024-08-08__open-source-ai-demo-night.md  README.md  env-sample.txt  getting-ready.md  pyproject.toml  requirements.txt  setup-python-dev-env.md  tutorials.md
data-prep-kit/: README.md  doc_quality_1.ipynb  dpk_1_intro.ipynb  file_utils.py  hap_1.ipynb  pii_1.ipynb  requirements.txt
demo-1/: demo1.ipynb
docling/: README.md  docling_1_intro.ipynb  docling_2_ocr.ipynb  requirements.txt
dpk-intro/: README.md  dpk-intro-1.ipynb  dpk_intro_1.ipynb  dpk_intro_1_python.ipynb  dpk_intro_1_ray.ipynb  dpk_ocr_1.ipynb  process_pdfs_1_python.ipynb  process_pdfs_1_ray.ipynb
events/: 2024-08-08__open-source-ai-demo-night.md  2024-09-21__RAG-workshop-data-riders.md  2024-10-21__IBM-tech-xchange-workshop.md  2025-01-30__AI-alliance-office-hour-docling.md  2025-01__AI-alliance-office-hour.md  2025-02-06__AI-alliance-office-hour-data-prep-kit.md  2025-02-13__AI-alliance-office-hour-RAG-workshop.md  data-prep-kit-rag-workshop.md  data-prep-kit-workshop.md  getting-ready.md
media/: data-prep-kit-1.excalidraw  data-prep-kit-2.excalidraw  data-prep-kit-3-workflow.excalidraw  data-prep-kit-scaling-1.excalidraw  rag-overview-1.excalidraw  rag-website-1.excalidraw
milvus/: milvus_1_quick_start.ipynb  milvus_2_movie_search.ipynb
perf-pdf2pq/: .gitignore  README.md  requirements.txt  test_pdf2pq_py.py  test_pdf2pq_ray.py
rag-ai-alliance-website-1-dpk/: .dockerignore  .gitignore  2_process_html.ipynb  3_save_to_vector_db.ipynb  4_query.ipynb  Dockerfile-flask  (+5 more)
(+124 files in other folders)
